# napari-blob-detection

./: .gitignore  LICENSE  README.md  README.md - Verknüpfung.lnk  mkdocs.yml  requirements.txt  setup.cfg  setup.py  test_case.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
examples/: Untitled.ipynb  blob_classifier_example.ipynb  blob_detection_example.ipynb  blob_detection_example.py  blob_detection_example_2D.ipynb  blob_detection_example_2DT.ipynb  blob_detection_example_3D.ipynb  blob_detection_example_3DT.ipynb  blob_tracking_example_3DT.ipynb  example_detection.csv  test.csv  test.txt
napari_blob_detection/: _dock_widget.py  measure_blobs.py  measure_distance_points_objects.py  napari.yaml  random_points_mask.py  svm.py
napari_blob_detection/_tests/: playground.py  test_dock_widget.py  test_function.py  test_playground.py
src/napari_blob_detection/: __init__.py  _dock_widget.py  _widget.py  detectors.py  measure_blobs.py  napari.yaml  svm.py  use_cases.py  utils.py
src/napari_blob_detection/_tests/: playground.py  test_dock_widget.py  test_function.py  test_widgets.py
