[metadata]
name = napari-blob-detection
author = Adrian Tschan
author_email = adrian.tschan@uzh.ch
license = BSD-3
url = https://github.com/adrtsc/napari-blob-detection
description = napari plugin to detect blobs in images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/adrtsc/napari-blob-detection/issues
	Documentation = 'https://github.com/adrtsc/napari-blob-detection#README.md'
	Source Code = https://github.com/adrtsc/napari-blob-detection
	User Support = https://github.com/adrtsc/napari-blob-detection/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	scikit-image
	napari
	pandas
	matplotlib
	pyqt5
	qtpy
include_package_data = True

[options.entry_points]
napari.manifest = 
	napari-blob-detection = napari_blob_detection:napari.yaml

[options.package_data]
napari_blob_detection = napari.yaml

