[metadata]
name = napari-blob-detection
version = 0.0.1
author = Adrian Tschan
author_email = adrian.tschan@uzh.ch
url = https://github.com/adrtsc/napari-blob-detection
license = BSD-3-Clause
description = A napari plugin for blob detection.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/adrtsc/napari-blob-detection/issues
    Documentation = https://github.com/adrtsc/napari-blob-detection#README.md
    Source Code = https://github.com/adrtsc/napari-blob-detection
    User Support = https://github.com/adrtsc/napari-blob-detection/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
	scikit-image==0.21.0
	napari==0.4.15
 	pydantic==1.10.13
 	PyQt5==5.15.10
  	jupyter==1.0.0
	pandas==2.0.3
	matplotlib==3.7.3
	scikit-learn==1.3.2
	trackpy==0.6.1

[options.packages.find]
where = src

[options.package_data]
napari-blob-detection = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-blob-detection = napari_blob_detection:napari.yaml
